Add syntax highlighting via highlight.js, also added a sentence to airline post on why I didn't use boxplot

--- a/content/post/2017-09-24-flights-from-gsp.Rmd
+++ b/content/post/2017-09-24-flights-from-gsp.Rmd
@@ -116,7 +116,7 @@ weekly_deviations %>%
 
 Fridays and Saturdays tend to run fewer flights than other days, so if you can plan your trip in advance and like to avoid crowds, these are the two days to aim for.
 
-Note here that the strategy I used with `ggplot2` is slightly different from the conventional bar plot or line plot. In this case, I knew I would be plotting a range of values by week day, so I used the `stat_summary` function in `ggplot2` with a geom of "pointrange". This geom plots the point at a central location and a thinner-looking segment. In this case, because my function was `median_hilow`, the point is the median of `deviation` within `DAY_OF_WEEK`, and the segment covers from the low to the high value of `deviation` within `DAY_OF_WEEK`. Other functions, such as those showing mean plus or minus one standard error, could have been used. `stat_summary` is a useful function for showing summary statistics on graphs when you don't want to compute them by hand. The [reference page](http://ggplot2.tidyverse.org/reference/stat_summary.html) over at the Tidyverse website shows a couple of other use cases.
+Note here that the strategy I used with `ggplot2` is slightly different from the conventional bar plot or line plot. In this case, I knew I would be plotting a range of values by week day, so I used the `stat_summary` function in `ggplot2` with a geom of "pointrange". This geom plots the point at a central location and a thinner-looking segment. In this case, because my function was `median_hilow`, the point is the median of `deviation` within `DAY_OF_WEEK`, and the segment covers from the low to the high value of `deviation` within `DAY_OF_WEEK`. Other functions, such as those showing mean plus or minus one standard error, could have been used. `stat_summary` is a useful function for showing summary statistics on graphs when you don't want to compute them by hand. The [reference page](http://ggplot2.tidyverse.org/reference/stat_summary.html) over at the Tidyverse website shows a couple of other use cases. An alternative to this presentation is the `geom_boxplot`, which presents the median, first quartile, third, quartile, and outliers, but I felt the purpose here called for a simpler presentation.
 
 # Discussion
 
