nice ending to rearview mirror post

--- a/content/post/2018-01-01-2017-in-the-rearview-mirror.Rmd
+++ b/content/post/2018-01-01-2017-in-the-rearview-mirror.Rmd
@@ -26,3 +26,5 @@ In the coming year, I see my interests evolving:
  * And new content twice a month
  
 With that, I wish you a Happy 2018!
+
+See you in two weeks!
