Fix messages in first post; fix draft status in second

--- a/content/post/2017-09-24-flights-from-gsp.Rmd
+++ b/content/post/2017-09-24-flights-from-gsp.Rmd
@@ -9,8 +9,7 @@ tags:
 draft: no
 ---
 
-```{r setup}
-knitr::opts_chunk$set(message = FALSE, warning = FALSE)
+```{r setup, message=FALSE}
 library(tidyverse)
 library(lubridate)
 ```
